[project]
classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: Pytest",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: Software Development :: Testing",
]
dependencies = [
  "attrs",
  "cattrs",
  "ibutsu-client>=2.1",
  "pytest>=7.1",
]
description = "A plugin to sent pytest results to an Ibutsu server"
dynamic = ["version"]
license = "MIT"
maintainers = [{name = "Raoul Snyman"}, {name = "Dmitry Misharov"}]
name = "pytest-ibutsu"
readme = "README.rst"

[project.urls]
Source = "https://github.com/ibutsu/pytest-ibutsu"
Tracker = "https://github.com/ibutsu/pytest-ibutsu/issues"

[project.optional-dependencies]
dev = [
  "pytest-subtests",
  "pytest-xdist",
]

dev-without-xdist = [
  "pytest-subtests",
]

[project.entry-points.pytest11]
ibutsu = "pytest_ibutsu.pytest_plugin"

[build-system]
build-backend = "hatchling.build"
requires = [
  "hatchling>=1.3.1",
  "hatch-vcs",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.sdist]
include = ["/src"]

[tool.hatch.build.targets.wheel]
packages = ["/src/pytest_ibutsu"]
