[project]
classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: Pytest",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: Software Development :: Testing",
]
dependencies = [
  "attrs",
  "cattrs",
  "ibutsu-client>=2.1",
  "pytest",
]
description = "A plugin to sent pytest results to an Ibutsu server"
dynamic = ["version"]
license = "MIT"
maintainers = [{name = "Raoul Snyman"}, {name = "Dmitry Misharov"}, {name = "Mike Shriver"}]
name = "pytest-ibutsu"
readme = "README.rst"
requires-python = ">=3.11"

[project.urls]
Source = "https://github.com/ibutsu/pytest-ibutsu"
Tracker = "https://github.com/ibutsu/pytest-ibutsu/issues"

[dependency-groups]
test = [
  "pytest-subtests",
  "pytest-xdist",
  "python-jose",
  "pytest-cov",
  "coverage[toml]",
  "boto3",
]

s3 = [
  "boto3",
]

[project.entry-points.pytest11]
ibutsu = "pytest_ibutsu.pytest_plugin"

[build-system]
build-backend = "hatchling.build"
requires = [
  "hatchling>=1.3.1",
  "hatch-vcs",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.sdist]
include = ["/src"]

[tool.hatch.build.targets.wheel]
packages = ["/src/pytest_ibutsu"]

[tool.hatch.envs.hatch-test]
extra-dependencies = ["pytest-ibutsu[test]"]

[[tool.hatch.envs.hatch-test.matrix]]
python = ["3.11", "3.12", "3.13"]

[tool.uv]
default-groups = ["test"]

[tool.mypy]
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["ibutsu_client.*"]
ignore_missing_imports=true
follow_untyped_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_classes = ["Test*"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
filterwarnings = [
    "ignore::pytest.PytestCollectionWarning"
]
addopts = [
    "--cov=pytest_ibutsu",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-report=html",
    "--cov-branch",
    "--cov-fail-under=74",
    "-v"
]

[tool.coverage.run]
source = ["src/pytest_ibutsu"]
branch = true
omit = [
    "*/tests/*",
    "*/test_*",
    "*/conftest.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "TYPE_CHECKING",
]
show_missing = true
precision = 2
skip_covered = false

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"
